// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plan mysql should have an expected appearance when all changes need to be applied 1`] = `
"    [1mPlanning required actions...[22m

    

      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification.sql [90m(resource:table:notification)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification_version.sql [90m(resource:table:notification_version)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:find_message_hash_by_text)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/procedures/upsert_message.sql [90m(resource:procedure:upsert_message)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
    
    [1mSummary...[22m
    
      * [1m[32m[APPLY][39m[22m 10

"
`;

exports[`plan mysql should have an expected appearance when some resources need to be reapplied manually or automatically 1`] = `
"    [1mPlanning required actions...[22m

    

      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification.sql [90m(resource:table:notification)[39m[22m
      * [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification_version.sql [90m(resource:table:notification_version)[39m[22m
          [32m- Expected[39m
          [31m+ Received[39m
    
          [32m- CREATE TABLE [7m\`[27mnotification_version[7m\`[27m ([39m
          [31m+ CREATE TABLE notification_version ([39m
          [32m-   \`notification_id\` [7mbigint(20)[27m NOT NULL,[39m
          [31m+   \`notification_id\` [7mBIGINT[27m NOT NULL,[39m
          [32m-   \`effective_at\` [7mdatetime(3) NOT NULL,[27m[39m
          [32m-   PRIMARY KEY (\`notification_id\`, \`effective_at\`)[39m
          [32m- ) ENGINE = InnoDB DEFAULT CHARSET = utf8mb4 COLLATE = utf8mb4_unicode_ci[39m
          [31m+   \`effective_at\` [7mDATETIME(6) NOT NULL,[27m[39m
          [31m+   \`status\` ENUM('WAITING', 'QUEUED', 'SENT') NOT NULL,[39m
          [31m+   PRIMARY KEY (\`notification_id\`, \`effective_at\`),[39m
          [31m+   INDEX notification_version_ix1 (\`status\`),[39m
          [31m+   CONSTRAINT notification_version_fk1 FOREIGN KEY (\`notification_id\`) REFERENCES notification(id)[39m
          [31m+ ) ENGINE = InnoDB;[39m
    
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
      * [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:find_message_hash_by_text)[39m[22m
          [32m- Expected[39m
          [31m+ Received[39m
    
          [32m- CREATE FUNCTION [7m\`[27mfind_message_hash_by_text[7m\`[27m([39m
          [31m+ CREATE FUNCTION find_message_hash_by_text([39m
          [2m    in_message TEXT[22m
          [32m- )[7m [27mRETURNS [7mchar(64) CHARSET utf8mb4 COLLATE utf8mb4_unicode_ci[27m[39m
          [31m+ )[39m
          [31m+ RETURNS [7mBINARY(32)[27m[39m
          [2m  BEGIN[22m
          [32m-   RETURN SHA[7m2[27m(in_message[7m, 256[27m);[39m
          [31m+   RETURN [7mUNHEX([27mSHA(in_message[7m)[27m);[39m
          [32m- END[39m
          [31m+ END[7m;[27m[39m
    
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/procedures/upsert_message.sql [90m(resource:procedure:upsert_message)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
    
    [1mSummary...[22m
    
      * [1m[32m[APPLY][39m[22m 8
      * [1m[33m[REAPPLY][39m[22m 1
      * [1m[31m[MANUAL_MIGRATION][39m[22m 1

"
`;

exports[`plan postgres should have an expected appearance when all changes need to be applied 1`] = `
"    [1mPlanning required actions...[22m

    

      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/photo.sql [90m(resource:table:photo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/functions/upsert_photo.sql [90m(resource:function:upsert_photo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
    
    [1mSummary...[22m
    
      * [1m[90m[NO_CHANGE][39m[22m 1
      * [1m[32m[APPLY][39m[22m 8

"
`;

exports[`plan postgres should have an expected appearance when some resources need to be reapplied manually or automatically 1`] = `
"    [1mPlanning required actions...[22m

    

      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
      * [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/postgres/definitions/tables/photo.sql [90m(resource:table:photo)[39m[22m
          [32m- Expected[39m
          [31m+ Received[39m
    
          [2m  CREATE TABLE photo ([22m
          [2m    id bigserial NOT NULL,[22m
          [2m    uuid uuid NOT NULL,[22m
          [2m    created_at timestamp with time zone NOT NULL DEFAULT now(),[22m
          [32m-   url varchar NOT NULL,[39m
          [31m+   url varchar[7m(255)[27m NOT NULL,[39m
          [32m-   CONSTRAINT photo_pk PRIMARY KEY (id)[39m
          [31m+   CONSTRAINT photo_pk PRIMARY KEY (id)[7m,[27m[39m
          [31m+   CONSTRAINT photo_ux1 UNIQUE (url)[39m
          [2m  );[22m
    
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/functions/upsert_photo.sql [90m(resource:function:upsert_photo)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
      * [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
    
    [1mSummary...[22m
    
      * [1m[90m[NO_CHANGE][39m[22m 1
      * [1m[32m[APPLY][39m[22m 7
      * [1m[31m[MANUAL_MIGRATION][39m[22m 1

"
`;
